--- a/segments/vtone/Hero.module.scss
+++ b/segments/vtone/Hero.module.scss
@@ -6,21 +6,26 @@
 }
 
 .videoContainer {
-  position: fixed;
+  position: absolute;
   inset: 0;
-  z-index: -1;
+  z-index: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .videoBg {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  transform: translate(-50%, -50%);
   object-fit: cover;
   object-position: center;
+  z-index: 0;
 }
 
 .videoOverlay {
